--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -15,15 +15,15 @@
   color: red;
   
 }
-.spanAroundFavoritesList{
-  float:right;
- 
+.divAroundFavoritesList{
+  align-self: center;
+ margin-left: auto;
   
 }
 .navbarlogotopleft{
   object-fit: fill;
-  height: 150px;
-  width:150px;
+  height: 100px;
+  width:100px;
 }
 
 
